# UR10e_welding_demo

./: .pre-commit-config.yaml  README.md  UR10e_welding_demo.repos  upstream.repos
.github/workflows/: build_and_test.yaml  format.yaml
hybrid_planning_demo/: CMakeLists.txt  package.xml  plugins.xml  servo_solver_plugin.xml  simple_servo_sampler_plugin.xml
hybrid_planning_demo/config/: common_hybrid_planning_params.yaml  global_planner.yaml  local_planner.yaml  servo_solver.yaml
hybrid_planning_demo/include/hybrid_planning_demo/: global_mtc_planner.h  global_planner_component.h  servo_solver.h  simple_servo_sampler.h
hybrid_planning_demo/src/: global_mtc_planner.cpp  hybrid_planning_test_node.cpp  servo_solver.cpp  simple_servo_sampler.cpp
ipa_bringup/: CMakeLists.txt  package.xml
ipa_bringup/config/: catmux_session_config.yaml  update_rate.yaml  ur10e_update_rate.yaml  ur_controllers.yaml
ipa_bringup/launch/: demo_launch_utilities.py  hybrid_planning.launch.py  hybrid_planning_demo.launch.py  hybrid_planning_env.launch.py  rviz.launch.py  send_hybrid_goal.launch.py  ur10e.launch.py  ur5e.launch.py  ur_control.launch.py
ipa_bringup/src/: keyboard_input.cpp
ipa_demo_cell_description/: CMakeLists.txt  package.xml
ipa_demo_cell_description/calibration/: calibration_ur10e.yaml  calibration_welding_gun_lorch_scancontrol.yaml  calibration_welding_gun_lorch_scancontrol_3000.yaml
ipa_demo_cell_description/config/ur10e/: calibrated_kinematics.yaml  cartesian_limits.yaml  joint_limits.yaml  pilz_joint_limits.yaml  ros2_control_initial_positions.yaml
ipa_demo_cell_description/launch/: view_demo.launch.py
ipa_demo_cell_description/meshes/: env_link.STL  welding_gun_lorch_scancontrol.STL  welding_gun_lorch_scancontrol_3000_collision.STL  welding_gun_lorch_scancontrol_collisions.STL
ipa_demo_cell_description/rviz/: view_robot.rviz
ipa_demo_cell_description/urdf/: ipa_demo_env.urdf.xacro  ipa_ur_demo.urdf.xacro  ur_macro.xacro  welding_gun_lorch_scancontrol.urdf.xacro  welding_gun_lorch_scancontrol_3000.urdf.xacro
ipa_demo_support/: CMakeLists.txt  package.xml
ipa_demo_support/workpieces/Workpiece_Demo_deviated/: Workpiece_Demo_TaskDescription_dev.xml  Workpiece_Demo_dev.STL  Workpiece_Demo_deviated.STEP  Workpiece_Demo_deviated.scene
ipa_demo_support/workpieces/Workpiece_Demo_nominal/: Workpiece_Demo_TaskDescription_nominal.xml  Workpiece_Demo_nominal.STEP  Workpiece_Demo_nominal.STL  Workpiece_Demo_nominal.scene  Workpiece_Demo_nominal.xml
ipa_moveit_config/: CMakeLists.txt  package.xml
ipa_moveit_config/config/: cartesian_limits.yaml
ipa_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
processit_cax/: CMakeLists.txt  package.xml
processit_cax/include/: plugin_task_description.h
processit_cax/include/TaskDescription/: Contour.h  TaskDefinition.h  Templates.h  WeldSegment.h
processit_cax/include/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
processit_cax/launch/: plugin_task_description_test.launch.py
processit_cax/src/: plugin_task_description.cpp  plugin_task_description_test_node.cpp
processit_cax/src/TaskDescription/: Contour.cpp  TaskDefinition.cpp  WeldSegment.cpp
processit_msgs/: CMakeLists.txt  package.xml
processit_msgs/msg/: WeldSeam.msg
processit_msgs/srv/: AddPoseMarker.srv  EditPoseMarker.srv  LoadTaskDescription.srv
processit_program/: CMakeLists.txt  package.xml
processit_program/include/: pose_marker.h
processit_program/src/: pose_marker.cpp
processit_tasks/: CMakeLists.txt  package.xml
processit_tasks/config/: hybrid_planning_demo.yaml
processit_tasks/include/processit_tasks/: cartesian_task.h  welding.h
processit_tasks/src/: cartesian_task.cpp  welding.cpp
