<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ipa_moveit_config</name>
  <version>0.0.0</version>
  <description>
     MoveIt2 configurations for UR10e Fraunhofer IPA welding application.
  </description>
  <maintainer email="adam.pettinger@picknik.ai">Adam Pettinger</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
