<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>processit_cax</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christian.landgraf@ipa.fraunhofer.de">Christian Landgraf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>processit_msgs</depend>
  <!-- <depend>moveit_visual_tools</depend> -->
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
